Added simple jekyll template

--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script type="application/javascript">
-			$(function() {
-				$("input[type='button']").click(function() {
-					alert($(this).val());
-				});
-			});
-		</script>
-		<title>Test</title>
-	</head>
+---
+layout: default
+title: Eugene Burtsev's blog
+---
 
-	<body>
-		<input value="Test" type="button" />
-	</body>
-</html>
+TEST
+
