--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@ layout: default
 title: Eugene Burtsev's blog
 ---
 
-TEST
+<ul>
+{% for post in site.posts %}
+	<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
 
